# raster

./: .gitignore  Cargo.toml  README.org  start_server.sh
.github/workflows/: build_binaries.yml  build_binary.yml
assets/: .gitignore  chair.mtl  chair_low_resolution.mtl  elephant.mtl  screw.mtl  triangles.mtl
docs/: index.html  manifest.json  raster.js  raster_bg.wasm  sw.js
src/: app.rs  lerp.rs  lib.rs  main-bak.rs  main.rs  mesh.rs  raster.rs  shader.rs  types.rs  ui.rs  util.rs  wavefront.rs
