[package]
name = "raster"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.43"
approx = "0.5.0"
eframe = "0.14.0"
image = "0.23.14"
lazy_static = "1.4.0"
nalgebra = "0.29.0"
smallvec = "1.6.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
debug = true
opt-level = 2
